add basic text input form for rubric url

--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,15 @@
-.App {
-  text-align: center;
+.jumbotron {
+  padding-left: 3rem;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+@media (min-width: 768px) {
+
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+@media (min-width: 992px) {
+
 }
 
-.App-intro {
-  font-size: large;
-}
+@media (min-width: 1200px) {
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
 }
