--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ nav li {
   font-variant: small-caps;
 }
 
-.criteria-page {
+.body {
     margin-top: 70px;
 }
 
@@ -32,4 +32,8 @@ ol.breadcrumb {
 textarea {
   width: 100%;
   height: 300px;
+}
+
+.reportCol {
+  border-color: orange
 }
