Add some mobile friendly styling

--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,41 @@ nav li {
     margin-top: 60px;
 }
 
+.home-page {
+    margin-top: 50px
+}
+
+.header {
+  padding-left: 20px;
+}
+
 ol.breadcrumb {
     display: inline
+}
+
+/* Large desktops and laptops */
+@media (min-width: 1200px) {
+  .home-page {
+    margin-top: 0px;
+  }
+}
+
+/* Landscape tablets and medium desktops */
+@media (min-width: 992px) and (max-width: 1199px) {
+
+}
+
+/* Portrait tablets and small desktops */
+@media (min-width: 768px) and (max-width: 991px) {
+
+}
+
+/* Landscape phones and portrait tablets */
+@media (max-width: 767px) {
+
+}
+
+/* Portrait phones and smaller */
+@media (max-width: 480px) {
+
 }
