Make ReportPage have textarea for comments instead of p tag
This makes the comment area tab-able, and easier to select and copy

--- a/src/App.css
+++ b/src/App.css
@@ -86,6 +86,11 @@ ol.breadcrumb {
   margin-top: 0.5em;
 }
 
+.rootSectionComments > textarea {
+  border: none;
+  height: 100%;
+}
+
 
 /* Portrait tablets and small desktops */
 @media (min-width: 768px) {
