Add default comment dropdown framework
Added parsing support for default comments in the xml
Added a default comment dropdown to CriteriaBody
added an empty default comment in Criterion model's default comment array

Still need to add state/click handling and shifting current criteria's
grade to be that of the selected default comments

--- a/src/App.css
+++ b/src/App.css
@@ -34,9 +34,20 @@ main {
 
 }
 
+
+
 #criteria-body {
   border: 1px solid black;
   padding: 2em;
+}
+
+#default-comments-dropdown {
+  margin-top: 1em;
+  width: 100%;
+}
+
+#default-comments-dropdown > select {
+  width: 100%
 }
 
 textarea {
