--- a/src/App.css
+++ b/src/App.css
@@ -26,33 +26,20 @@ main {
 
 
 /* Criteria page */
-/*#criteria-page {
-    margin-top: 60px;
-}*/
 
-#criteria-toolbar {
-
+#criteria-page {
+  max-width: 80em;
+  margin: auto;
 }
-
-
 
 #criteria-body {
   border: 1px solid black;
   padding: 2em;
 }
 
-#default-comments-dropdown {
-  margin-top: 1em;
-  width: 100%;
-}
 
-#default-comments-dropdown > select {
-  width: 100%
-}
-
-textarea {
-  width: 100%;
-  /*height: 300px;*/
+textarea#criteriaCommentForm {
+  height: 10em;
 }
 
 #progress-box {
@@ -62,11 +49,6 @@ textarea {
 ol.breadcrumb {
     display: inline;
 }
-
-.alert {
-  margin-bottom: 2em;
-}
-
 /* Report Page */
 
 
@@ -93,16 +75,17 @@ ol.breadcrumb {
 }
 
 .rootSectionComments {
-  overflow: scroll;
   border: 1px solid black;
-  padding: 0.5em;
+  /*padding-left: 0.5em;*/
   height: 150px;
   margin-top: 0.5em;
+  /*overflow: scroll;*/
 }
 
 .rootSectionComments > textarea {
   border: none;
   height: 100%;
+  width: 100%;
 }
 
 
@@ -126,5 +109,9 @@ ol.breadcrumb {
     padding-left: 0;
     padding-right: 0;
   }
+
+  /*.progress-box {
+    float: right !important;
+  }*/
 }
 
