--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,10 @@ main {
   margin: auto;
 }
 
+#criteria-toolbar {
+  font-size: 1.5em;
+}
+
 #criteria-body {
   border: 1px solid black;
   padding: 2em;
